--- a/BlockChainWallet/BlockChainWallet/Base.lproj/Main.storyboard
+++ b/BlockChainWallet/BlockChainWallet/Base.lproj/Main.storyboard
@@ -119,7 +119,11 @@
                         <segue destination="MYR-hO-lTe" kind="show" id="fNW-uw-vpH"/>
                     </connections>
                 </tapGestureRecognizer>
-                <tapGestureRecognizer id="uJ2-nT-hWg"/>
+                <tapGestureRecognizer id="uJ2-nT-hWg">
+                    <connections>
+                        <segue destination="Cc7-Wk-0Ah" kind="show" id="wg1-NK-baC"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="34.782608695652179" y="75.669642857142847"/>
         </scene>
@@ -128,23 +132,23 @@
             <objects>
                 <viewController id="Cc7-Wk-0Ah" customClass="RecoverIdentityViewController" customModule="BlockChainWallet" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nHT-bR-U2N">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="恢复身份" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N3m-2h-vdR">
-                                <rect key="frame" x="30" y="64" width="354" height="21"/>
+                                <rect key="frame" x="30" y="20" width="354" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="你讲会拥有身份下的多链钱包，比如ETH、BTC" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0c7-RR-nTr">
-                                <rect key="frame" x="30" y="100" width="354" height="17"/>
+                                <rect key="frame" x="30" y="56" width="354" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" systemColor="systemGray2Color"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6YZ-ax-eFQ">
-                                <rect key="frame" x="30" y="147" width="354" height="120"/>
+                                <rect key="frame" x="30" y="103" width="354" height="120"/>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="DTh-Ss-iCV"/>
@@ -154,19 +158,19 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="W2J-WU-58I">
-                                <rect key="frame" x="30" y="287" width="354" height="34"/>
+                                <rect key="frame" x="30" y="243" width="354" height="34"/>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="重复输入密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fuv-Aj-DuK">
-                                <rect key="frame" x="30" y="341" width="354" height="34"/>
+                                <rect key="frame" x="30" y="297" width="354" height="34"/>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l0f-sw-jfs">
-                                <rect key="frame" x="30" y="786" width="354" height="46"/>
+                                <rect key="frame" x="30" y="732" width="354" height="46"/>
                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="恢复身份">
@@ -180,6 +184,7 @@
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="create:" destination="MYR-hO-lTe" eventType="touchUpInside" id="AfJ-gJ-KV5"/>
+                                    <action selector="recover:" destination="Cc7-Wk-0Ah" eventType="touchUpInside" id="JFn-ts-fVl"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -208,6 +213,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="I50-cU-aKo"/>
+                    <connections>
+                        <outlet property="confirmPwdTxtF" destination="fuv-Aj-DuK" id="zR5-Bt-7YP"/>
+                        <outlet property="passwordTxtF" destination="W2J-WU-58I" id="mvc-cn-KdV"/>
+                        <outlet property="textView" destination="6YZ-ax-eFQ" id="fdb-Eu-G1d"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="csf-lR-nZJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
